# gr-qs1r

./: CMakeLists.txt  README.md
docs/: README.qs1r
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: qs1r.grc  top_block.py
firmware/: 10-qs1r.rules  CMakeLists.txt  QS1R_WINRAD_04112011.rbf  qs1r_firmware_03032011.hex
grc/: CMakeLists.txt  qs1r_qs1r_src.xml
include/qs1r/: CMakeLists.txt  api.h  qs1r_src.h
lib/: CMakeLists.txt  qa_qs1r.cc  qa_qs1r.h  qs1r_src_impl.cc  qs1r_src_impl.h  qs_io_libusb.cc  qs_io_libusb.h  test_qs1r.cc
python/: CMakeLists.txt  __init__.py  qa_qs1r_src.py
swig/: CMakeLists.txt  qs1r_swig.i
